<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Search">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/input_rounded"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:iconifiedByDefault="false"
        android:queryHint="SEARCH" />

    <ListView
        android:id="@+id/lv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:color="#ffffff"
        android:descendantFocusability="blocksDescendants"
        android:divider="#000000"
        android:dividerHeight="1dp"
        android:textColor="#ffffff" />

</LinearLayout>