<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CalendarPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:headerColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnRecordPain"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:text="RECORD PAIN"
            android:textColor="@color/buttonText" />

        <Button
            android:id="@+id/btnExportMonth"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded"
            android:text="EXPORT MONTH"
            android:textColor="@color/buttonText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>